--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="menu"></div>
         <a id="home" href="">HOME</a>
         <a id="offers" href="">OFFERS</a>
-        <a id="products" href="">PRODUCTS</a>
+        <a id="products" href="./index1.html">PRODUCTS</a>
         <a id="contact_us" href="">SIGN IN</a>
         <textarea name="search" id="search" cols="50" rows="1" onclick="searchhere()">Search Here</textarea>
         <img id="img1" src="https://cdn.icon-icons.com/icons2/2566/PNG/512/search_icon_153438.png" alt="search">
