--- a/index1.html
+++ b/index1.html
@@ -27,7 +27,7 @@
 
 
 <body>
-    <img src="/images/laptop.jpg" alt="" srcset="" class="image">
+    <img src="images/laptop.jpg" alt="" srcset="" class="image">
     <div class="title">
         <a href="" class="a">a</a>
         <p class="best">BEST LAPTOPS TO BUY UNDER 60000 RS</p>
