--- a/index1.html
+++ b/index1.html
@@ -38,7 +38,7 @@
 
     <section class="b">
         <div class="first" id="first">
-            <img src="../images/lenovo.jpeg" alt="" id="lenovo">
+            <img src="images/lenovo.jpeg" alt="" id="lenovo">
 
             <div class="text">
                 <p>Lenovo Legion i5 9th Gen</p>
