--- a/index1.html
+++ b/index1.html
@@ -206,6 +206,9 @@
             <tr>
                 <td>4 GB GDDR6</td>
             </tr>
+            <tr>
+                <td>-</td>
+            </tr>
         </table>
 
         <table class="table table-active" id="f">
@@ -213,7 +216,7 @@
                 <th>Memory</th>
             </tr>
             <tr>
-                <td>8 GB <br>DDR4 RAM</td>
+                <td>8 GB DDR4 RAM</td>
             </tr>
             <tr>
                 <td>256 GB SSD</td>
@@ -240,7 +243,7 @@
                 <th>Ports</th>
             </tr>
             <tr>
-                <td>1 x USB-C <br>3.2 Gen 2</td>
+                <td>1 x USB-C 3.2 Gen 2</td>
             </tr>
             <tr>
                 <td>2 x USB 3.2 (1st Gen)</td>
